// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CustomSlippageModal confirm button is disabled when shouldDisableConfirm is true: confirm button disabled 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#3c4d9d0f",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#121314",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#121314",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Confirm"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 0.5,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#ffffff",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CustomSlippageModal confirm button is enabled when shouldDisableConfirm is false: confirm button enabled 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#3c4d9d0f",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#121314",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#121314",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Confirm"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#ffffff",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CustomSlippageModal snapshot tests matches snapshot for complete modal 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#3c4d9d0f",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#121314",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#121314",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Confirm"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#ffffff",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CustomSlippageModal snapshot tests matches snapshot with confirm disabled 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#3c4d9d0f",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#121314",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#121314",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Confirm"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": true,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 0.5,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#ffffff",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`CustomSlippageModal snapshot tests matches snapshot with description shown 1`] = `
<View
  testID="bottom-sheet"
>
  <View
    testID="header-center"
  >
    <Text>
      Slippage
    </Text>
    <TouchableOpacity
      accessibilityLabel="Close"
      onPress={[Function]}
    >
      <Text>
        Close
      </Text>
    </TouchableOpacity>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="input-stepper"
    >
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-decrease"
      >
        <Text>
          -
        </Text>
      </TouchableOpacity>
      <Text
        testID="input-stepper-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="input-stepper-increase"
      >
        <Text>
          +
        </Text>
      </TouchableOpacity>
      <View
        testID="input-stepper-description"
      />
    </View>
  </View>
  <View
    style={
      {
        "padding": 16,
      }
    }
  >
    <View
      testID="keypad"
    >
      <Text
        testID="keypad-value"
      >
        0
      </Text>
      <TouchableOpacity
        onPress={[Function]}
        testID="keypad-button-5"
      >
        <Text>
          5
        </Text>
      </TouchableOpacity>
    </View>
  </View>
  <View
    style={
      {
        "flexDirection": "row",
        "gap": 12,
        "justifyContent": "space-around",
        "padding": 16,
      }
    }
  >
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#3c4d9d0f",
                "borderColor": "transparent",
                "borderRadius": 12,
                "borderWidth": 1,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#121314",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#121314",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View
      style={
        {
          "flex": 0.5,
        }
      }
    >
      <View
        style={
          [
            {
              "transform": [
                {
                  "scale": 1,
                },
              ],
            },
            {
              "alignItems": "center",
              "justifyContent": "center",
            },
          ]
        }
      >
        <View
          accessibilityLabel="Confirm"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            [
              {
                "alignItems": "center",
                "backgroundColor": "#121314",
                "borderRadius": 12,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "minWidth": 80,
                "opacity": 1,
                "overflow": "hidden",
                "paddingLeft": 16,
                "paddingRight": 16,
                "width": "100%",
              },
            ]
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "bottom": 0,
                "display": "flex",
                "justifyContent": "center",
                "left": 0,
                "opacity": 0,
                "position": "absolute",
                "right": 0,
                "top": 0,
              }
            }
            testID="spinner-container"
          >
            <View
              style={
                [
                  {
                    "alignItems": "center",
                    "columnGap": 8,
                    "flexDirection": "row",
                  },
                  undefined,
                ]
              }
              testID="spinner"
            >
              <View
                style={
                  [
                    {
                      "transform": [
                        {
                          "rotate": "0deg",
                        },
                      ],
                    },
                  ]
                }
                testID="spinner-animated-view"
              >
                <SvgMock
                  fill="currentColor"
                  name="Loading"
                  style={
                    [
                      {
                        "color": "#ffffff",
                        "height": 20,
                        "width": 20,
                      },
                      undefined,
                    ]
                  }
                  testID="spinner-icon"
                />
              </View>
            </View>
          </View>
          <View
            style={
              {
                "alignItems": "center",
                "columnGap": 8,
                "flexDirection": "row",
                "justifyContent": "center",
                "opacity": 1,
              }
            }
            testID="content-container"
          >
            <Text
              accessibilityRole="text"
              ellipsizeMode="clip"
              numberOfLines={1}
              style={
                [
                  {
                    "color": "#ffffff",
                    "flexGrow": 0,
                    "flexShrink": 1,
                    "flexWrap": "wrap",
                    "fontFamily": "Geist-Medium",
                    "fontSize": 16,
                    "fontWeight": 400,
                    "letterSpacing": 0,
                    "lineHeight": 24,
                    "textAlign": "center",
                  },
                  undefined,
                ]
              }
            >
              Confirm
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>
</View>
`;
